--- a/www/views/bio.html
+++ b/www/views/bio.html
@@ -1,14 +1,13 @@
 <nav>
   <ul>
-    <li><a href="#/bio">Bio</a></li>
-    <li><a href="#/">Discover</a></li>
+    <li class="nav-right"><a href="/#/"><i class="fa fa-angle-left"></i></a></li>
+    <li><a href="">Your Bio</a></li>
   </ul>
 </nav>
 
 <div id="bio">
-  <img ng-src="{{ mentor.Pircture }}" alt="" />
+  <img ng-src="{{ mentor.picture_url }}" alt="" />
   <h1>{{ mentor.first_name }} {{ mentor.last_name }}</h1>
-  <p>
-    {{ mentor.Bio }}
+  <p ng-bind-html="mentor.bio | linky">
   </p>
 </div>
