--- a/www/views/bio.html
+++ b/www/views/bio.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
-    <li class="nav-right"><a href="/#/"><i class="fa fa-angle-left"></i></a></li>
     <li><a href="">Your Bio</a></li>
+    <li class="nav-left"><a href="/#/"><i class="fa fa-angle-right"></i></a></li>
   </ul>
 </nav>
 
